--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style2.css">
-    <title>Hungry Monster-2</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Hungry Monster</title>
 </head>
 
 <body>
