--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     </div>
     <div id="menu-details"></div>
     <div id="main-chart"></div>
-   
+
     <script src="javascript.js"></script>
 </body>
 
 </html>
+
+<!-- End -->
